test/syntax/pass/attrs/warn_deprecated_attr.sync
[@deprecated]
let f x = x

[@deprecated("sorry :(")]
let g x = x

let test x = f true && g false
