test/syntax/fail/not_combinatorial/fun_when.sync
type state = S0
let f x = true when S0(x)
